--- a/package.json
+++ b/package.json
@@ -10,11 +10,16 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "electron": "13.1.8"
+    "electron": "13.1.8",
+    "electron-builder": "^22.3.2"
+  },
+  "dependencies": {
+    "electron-log": "^4.0.6",
+    "electron-updater": "^4.2.0"
   },
   "repository": {
-    "type" : "git",
-    "url" : "https://github.com/anchal-gupta/TinyBlock.git"
+    "type": "git",
+    "url": "https://github.com/anchal-gupta/TinyBlock.git"
   },
   "build": "electron-builder build --mac --win --publish never",
   "deploy": "electron-builder build --mac --win --publish always"
